syntax = "proto3";
package profile_badge;

option go_package = "nfxid/protos/gen/auth/profile_badge;profilebadgepb";

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "auth/badge.proto";

// 用户获得的徽章关联信息
message ProfileBadge {
  string id = 1; // 关联ID (UUID)
  string profile_id = 2; // 资料ID (UUID)
  string badge_id = 3; // 徽章ID (UUID)
  optional string description = 4; // 自定义描述
  optional int32 level = 5; // 等级
  google.protobuf.Timestamp earned_at = 6; // 获得时间
  google.protobuf.Timestamp created_at = 7; // 创建时间
  google.protobuf.Timestamp updated_at = 8; // 更新时间
  badge.Badge badge = 9; // 嵌套的徽章信息
}

// ProfileBadge 服务
service ProfileBadgeService {
  // 根据ID获取用户徽章关联
  rpc GetProfileBadgeByID (GetProfileBadgeByIDRequest) returns (GetProfileBadgeByIDResponse);
  
  // 根据ProfileID获取用户徽章列表
  rpc GetProfileBadgesByProfileID (GetProfileBadgesByProfileIDRequest) returns (GetProfileBadgesByProfileIDResponse);
  
  // 根据BadgeID获取用户徽章列表
  rpc GetProfileBadgesByBadgeID (GetProfileBadgesByBadgeIDRequest) returns (GetProfileBadgesByBadgeIDResponse);
  
  // 获取所有用户徽章关联列表（支持分页和过滤）
  rpc GetAllProfileBadges (GetAllProfileBadgesRequest) returns (GetAllProfileBadgesResponse);
}

// ProfileBadge Service Messages
message GetProfileBadgeByIDRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message GetProfileBadgeByIDResponse {
  ProfileBadge profile_badge = 1;
}

message GetProfileBadgesByProfileIDRequest {
  string profile_id = 1 [(buf.validate.field).string.uuid = true];
  optional bool include_badge = 2; // 是否包含徽章详细信息
}

message GetProfileBadgesByProfileIDResponse {
  repeated ProfileBadge profile_badges = 1;
}

message GetProfileBadgesByBadgeIDRequest {
  string badge_id = 1 [(buf.validate.field).string.uuid = true];
  optional bool include_badge = 2; // 是否包含徽章详细信息
}

message GetProfileBadgesByBadgeIDResponse {
  repeated ProfileBadge profile_badges = 1;
}

message GetAllProfileBadgesRequest {
  int32 page = 1 [(buf.validate.field).int32.gte = 1];
  int32 page_size = 2 [(buf.validate.field).int32 = {gte: 1, lte: 100}];
  optional string profile_id = 3 [(buf.validate.field).string.uuid = true]; // 按资料ID过滤
  optional string badge_id = 4 [(buf.validate.field).string.uuid = true]; // 按徽章ID过滤
  optional string badge_category = 5; // 按徽章分类过滤：achievement, skill, community, special
  optional bool include_badge = 6; // 是否包含徽章详细信息
}

message GetAllProfileBadgesResponse {
  repeated ProfileBadge profile_badges = 1;
  int32 total = 2;
}

